Change Javascript folder structure

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui-1.10.3.custom.min.js"></script>
-    <script type="text/javascript" src="js/zepto.js"></script>
-    <script type="text/javascript" src="js/foundation.min.js"></script>
-    <script type="text/javascript" src="js/fabric.js"></script>
-    <script type="text/javascript" src="js/views/templates/templatefactory.js"></script>
+    <script type="text/javascript" src="js/lib/jquery-ui-1.10.3.custom.min.js"></script>
+    <script type="text/javascript" src="js/lib/zepto.js"></script>
+    <script type="text/javascript" src="js/lib/foundation.min.js"></script>
+    <script type="text/javascript" src="js/lib/fabric.js"></script>
+    <script type="text/javascript" src="js/ui/views/templates/templatefactory.js"></script>
 
         <script type="text/javascript">
         $(function() {
@@ -41,15 +41,15 @@
     </script>
   
 
-    <script type="text/javascript" src="js/custom.modernizr.js"></script>
-    <script type="text/javascript" src="js/underscore-min.js"></script>
-    <script type="text/javascript" src="js/backbone-min.js"></script>
-    <script type="text/javascript" src="js/models/component.js"></script>
-    <script type="text/javascript" src="js/collections/componentset.js"></script>
-    <script type="text/javascript" src="js/models/circuit.js"></script>
-    <script type="text/javascript" src="js/views/componentview.js"></script>
-    <script type="text/javascript" src="js/views/componentsetview.js"></script>
-    <script type="text/javascript" src="js/views/circuitview.js"></script>
+    <script type="text/javascript" src="js/lib/custom.modernizr.js"></script>
+    <script type="text/javascript" src="js/lib/underscore-min.js"></script>
+    <script type="text/javascript" src="js/lib/backbone-min.js"></script>
+    <script type="text/javascript" src="js/ui/models/component.js"></script>
+    <script type="text/javascript" src="js/ui/collections/componentset.js"></script>
+    <script type="text/javascript" src="js/ui/models/circuit.js"></script>
+    <script type="text/javascript" src="js/ui/views/componentview.js"></script>
+    <script type="text/javascript" src="js/ui/views/componentsetview.js"></script>
+    <script type="text/javascript" src="js/ui/views/circuitview.js"></script>
     <script type="text/javascript" type="text/javascript">
         $(function() {
             var gridSize = 16;
