--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <ul class="right">
                     <li class="divider show-for-small"></li>
                     <li class="has-form">
-                        <a class="button" href="#">Button!</a>
+                        <a id="specialButton" class="button" href="#">Button!</a>
                     </li>
                 </ul>
             </section>
