--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/foundation-changes.css">
+    <link rel="stylesheet" href="css/font-awesome-4.0.3/css/font-awesome.min.css">
 
     <script type="text/javascript" data-main="main" src="js/require.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
 </head>
 
 <body>
+
+    <div id="loading-screen" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color:#444; z-index:100">
+        <div id="loading-cog" style="position: absolute; top: 50%; left: 50%; margin: -100px 0px 0px -100px;">
+            <i class="fa fa-cog fa-spin" style="font-size:200px"></i>
+        </div>
+    </div>
+
     <div class="fixed">
-        <nav class="top-bar">
+        <nav class="top-bar" data-topbar>
             <ul class="title-area">
                 <li class="name"><h1><a href="#">GateSim</a></h1></li>
             </ul>
@@ -50,7 +58,7 @@
     </div>
 
 	<div class="row">
-        <div class="large-2 columns sidebar sidebar-left">
+        <div class="large-2 medium-12 small-12 columns sidebar sidebar-left">
             <div data-pane="pane-1" class="button dropdown slider" href="#">Basic Gates</div>
             <div id="pane-1" class="panel" style="display:none;">
                 <div class="row">
@@ -73,10 +81,10 @@
             <div data-pane="pane-6" class="button dropdown slider" href="#">Custom</div>
             <div id="pane-6" class="panel" style="display:none;"></div>
         </div>
-        <div class="large-8 columns collpase">
+        <div class="large-8 medium-12 small-12 columns collpase">
             <canvas id="workbench"></canvas>
         </div>
-        <div class="large-2 columns sidebar sidebar-right">
+        <div class="large-2 medium-12 small-12 columns sidebar sidebar-right">
         </div>
 	</div>
 </body>
