--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
 <body>
 
-    <div id="loading-screen" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color:#444; z-index:100">
-        <div id="loading-cog" style="position: absolute; top: 50%; left: 50%; margin: -100px 0px 0px -100px;">
-            <i class="fa fa-cog fa-spin" style="font-size:200px"></i>
+    <div id="loading-screen">
+        <div id="loading-panel">
+            <i id="loading-icon" class="fa fa-cog fa-spin fa-5x"></i>
+            <div id="loading-text">Loading GateSim...</div>
         </div>
     </div>
 
