Fix bad layout changes happening when gate dragged from sidebar

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <div data-pane="pane-1" class="button dropdown slider" href="#">Basic Gates</div>
             <div id="pane-1" class="panel" style="display:none;">
                 <div class="row">
-                    <img data-templateid="and" src="" class="large-6 columns gate"></img>
-                    <img data-templateid="or" src="" class="large-6 columns gate"></img>
+                    <img data-templateid="and" src="" class="gate gate-left"></img>
+                    <img data-templateid="or" src="" class="gate gate-right"></img>
                 </div>
                 <div class="row">
                     <div data-templateid="not" class="large-6 columns gate2"></div>
