Refactor onload code

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <section class="top-bar-section">
             <ul class="large-3 columns">
-                <li class=""><a data-tooltip title="Run Circuit" href="#"><i class="fa fa-play"></i></a></li>
+                <li class=""><a data-tooltip title="Run Simulation" href="#"><i class="fa fa-play"></i></a></li>
                 <li class=""><a data-tooltip title="Save Progress" href="#"><i class="fa fa-save"></i></a></li>
                 <li class=""><a id="download-image" data-tooltip title="Download as .png" href="#"><i class="fa fa-download"></i></a></li>
             </ul>
