SQUASH: Implement inputs as separate objects

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <div data-templateid="or" src="" class="gate gate-right"></div>
                 </div>
                 <div class="row">
-                    <div data-templateid="not" class="large-6 columns gate2"></div>
-                    <div data-templateid="xor" class="large-6 columns gate2"></div>
+                    <div data-templateid="and" class="large-6 columns gate2"></div>
+                    <div data-templateid="and" class="large-6 columns gate2"></div>
                 </div>
             </div>
             <div data-pane="pane-2" class="button dropdown slider" href="#">Composite Gates</div>
