Add application.js to keep track of application state

--- a/index.html
+++ b/index.html
@@ -31,16 +31,9 @@
 
         <section class="top-bar-section">
             <ul class="large-3 columns">
-                <li class=""><a data-tooltip title="Run Simulation" href="#"><i class="fa fa-play"></i></a></li>
-                <li class=""><a data-tooltip title="Save Progress" href="#"><i class="fa fa-save"></i></a></li>
+                <li class=""><a id="run" data-tooltip title="Run Simulation" href="#"><i class="fa fa-play"></i></a></li>
+                <li class=""><a id="save" data-tooltip title="Save Progress" href="#"><i class="fa fa-save"></i></a></li>
                 <li class=""><a id="download-image" data-tooltip title="Download as .png" href="#"><i class="fa fa-download"></i></a></li>
-            </ul>
-
-            <ul class="right">
-                <li class="divider show-for-small"></li>
-                <li class="has-form">
-                    <a id="specialButton" class="button" href="#">Button!</a>
-                </li>
             </ul>
         </section>
     </nav>
