--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div data-pane="pane-1" class="button dropdown slider" href="#">Basic Gates</div>
             <div id="pane-1" class="panel" style="display:none;">
                 <div class="row">
-                    <div data-templateid="and" data-inputCount="2" data-outputCount="1" src="" class="gate gate-left"></div>
-                    <div data-templateid="or" data-inputCount="2" data-outputCount="1" src="" class="gate gate-right"></div>
+                    <div data-templateid="and" data-inputCount="2" data-outputCount="1" class="gate gate-left"></div>
+                    <div data-templateid="or" data-inputCount="2" data-outputCount="1" class="gate gate-right"></div>
                 </div>
                 <div class="row">
                     <div data-templateid="not" class="large-6 columns gate2"></div>
