--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <div data-templateid="off" data-inputcount="0" data-outputcount="1" class="gate gate-right"></div>
                 </div>
                 <div class="row">
+                    <div data-templateid="toggle" data-inputcount="0" data-outputcount="1" class="gate gate-left"></div>
+                </div>
+                <div class="row">
                     <div data-templateid="and" data-inputcount="2" data-outputcount="1" class="gate gate-left"></div>
                     <div data-templateid="or" data-inputcount="2" data-outputcount="1" class="gate gate-right"></div>
                 </div>
