Add LED component

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 </div>
                 <div class="row">
                     <div data-templateid="toggle" data-inputcount="0" data-outputcount="1" class="gate gate-left"></div>
+                    <div data-templateid="led" data-inputcount="1" data-outputcount="0" class="gate gate-right"></div>
                 </div>
                 <div class="row">
                     <div data-templateid="and" data-inputcount="2" data-outputcount="1" class="gate gate-left"></div>
