Remove right sidebar

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <div data-pane="pane-3" class="button dropdown slider" href="#">Memory</div>
             <div id="pane-3" class="panel" style="display:none;">
                 <table>
-                    <tr><td>SR Latch</td><td><div data-templateid="sr" data-inputcount="2" data-outputcount="1" class="gate"></div></td></tr>
-                    <tr><td>D Flip-Flop</td><td><div data-templateid="dfl" data-inputcount="2" data-outputcount="2" class="gate"></div></td></tr>
+                    <tr><td>SR Latch</td><td><div data-templateid="sr" data-inputcount="2" data-outputcount="2" class="gate"></div></td></tr>
+                    <tr><td>D Flip-Flop</td><td><div data-templateid="dff" data-inputcount="2" data-outputcount="2" class="gate"></div></td></tr>
                 </table>
             </div>
             <div data-pane="pane-4" class="button dropdown slider" href="#">Timing</div>
@@ -98,9 +98,6 @@
             <canvas id="rasterizer" style="display: none;"></canvas>
         </div>
         <div class="large-2 medium-12 small-12 columns sidebar sidebar-right">
-            <div class="panel">
-
-            </div>
         </div>
 	</div>
 </body>
